--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,11 +97,9 @@
         <%= yield %>
 
 
-        <%# Generic UJS/Ajax spinner. Bootstrap 5+ has built in spinner for this class, so update when
-            we upgrade to remove the img tag %>
-        <div class="spinner-border hidden" role="status">
-          <%spinner_msg = _("Loading...") %>
-          <%= image_tag("spinner.gif", alt: spinner_msg) %>
+        <%# Updated with Bootstrap 5 built in spinner %>
+        <div class="spinner-border text-dark d-none" role="status">
+          <span class="visually-hidden"><%spinner_msg = _("Loading...") %></span>
         </div>
 
       </main>
