--- a/app/views/layouts/_branding.html.erb
+++ b/app/views/layouts/_branding.html.erb
@@ -1,13 +1,13 @@
-<nav id="org-navbar" class="navbar navbar-default" role="navigation">
+<nav id="org-navbar" class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header" >
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#org-navbar-menu" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#app-navbar-menu" 
+      aria-controls="app-navbar-menu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="navbar-toggler-icon"></span>
+     </button>
+     
       <% if user_signed_in? && !current_user.org.nil? %>
         <% if current_user.org.logo.present? %>
           <%= image_tag(logo_url_for_org(current_user.org),
@@ -28,7 +28,7 @@
       i = 1
       %>
       <% if user_signed_in? && (links.any? || current_user.org.contact_email.present?) %>
-        <ul class="nav navbar-nav">
+        <ul class="navbar-nav mr-auto">
           <% links.each do |link| %>
             <% if link.present? && i <= max_number_links %>
               <% if i.odd? %>
