Issue # #3144 - First steps in moving from Bootstrap 3 to 5.
These changes were based on ideas in article "Use Bootstrap 5 with Ruby on Rails 6 and webpack"
     https://medium.com/daily-web-dev/use-bootstrap-4-with-ruby-on-rails-6-and-webpack-fe7300604267

    Changes

    - Node  package changes:
      * Changed version of bootstrap "^3.4.1" --> "^5.2.3"
      * Added  @popperjs/core.
      * Removed bootstrap-3-typeahead, bootstrap-sass & popper.js.

     - In app/assets/stylesheets/application.scss:
      * removed bootstrap-sass import and replaced with
           @import "../../../node_modules/bootstrap/scss/bootstrap";

     - In app/assets/stylesheets/blocks/:
        * Replaced in relevant files
           @use "../../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss" as * ;
        with
           @use "../../../../node_modules/bootstrap/scss/bootstrap" as *;

         * Enclosed all calculations / with calc() function, e.g.,
            replaced
                 padding-right: $grid-gutter-width / 2;
                 with
                 padding-right: calc($grid-gutter-width / 2);

          * Replaced with breaking media queries since Bootstrap 3:
             ** @media (max-width: $grid-float-breakpoint-max) {}
             with
             @include media-breakpoint-down(md){}

             **  @media (max-width: $grid-float-breakpoint-max) {}
              with
              @include media-breakpoint-down(md) {}

          (Based on blogs
           https://bibwild.wordpress.com/2019/06/10/what-happened-to-grid-float-breakpoint-in-bootstrap-4-and-screen-size-breakpoint-shift-from-3-4/ &
           https://www.educative.io/answers/what-are-media-queries-in-bootstrap-4)
        - Deleted app/javascript/src/utils/popoverHelper.js

--- a/app/assets/stylesheets/blocks/_font_awesomes.scss
+++ b/app/assets/stylesheets/blocks/_font_awesomes.scss
@@ -1,6 +1,5 @@
 @use '../variables/colours' as *;
-@use "../../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss" as *;
-
+@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
 // Override FontAwesome icons
 
 /* FONTAWESOME STYLING */
