--- a/app/assets/stylesheets/blocks/_panels.scss
+++ b/app/assets/stylesheets/blocks/_panels.scss
@@ -1,5 +1,5 @@
 @use '../variables/colours' as *;
-@use "../../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss" as *;
+@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
 // Override Bootstrap 3.0's Panels
 
 .panel-default {
@@ -19,8 +19,8 @@
 
 .panel-title a {
   display: block;
-  padding: 8px $grid-gutter-width / 2;
-  margin: -10px $grid-gutter-width / -2;
+  padding: 8px calc($grid-gutter-width / 2);
+  margin: -10px calc($grid-gutter-width / -2);
   background-color: $color-primary-background;
   color: $color-primary-text;
 }
