--- a/app/assets/stylesheets/blocks/_lists.scss
+++ b/app/assets/stylesheets/blocks/_lists.scss
@@ -1,4 +1,4 @@
-@use "../../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss" as *;
+@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
 // Overrides Bootstrap 3.0's lists
 
 /* list-group styling */
@@ -13,6 +13,6 @@
 
 /* LIST STYLING */
 span.sublist {
-  margin-left: $grid-gutter-width / -2;
+  margin-left: calc($grid-gutter-width / -2);
   margin-right: 25px;
 }
