--- a/app/assets/stylesheets/blocks/_modal_permissions.scss
+++ b/app/assets/stylesheets/blocks/_modal_permissions.scss
@@ -1,4 +1,4 @@
-@use "../../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss" as *;
+@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
 /* Overrides ul list */
 #modal-permissions ul {
   list-style-type: none;
@@ -12,5 +12,5 @@
 /* Overrides list-group-item */
 #modal-permissions .list-group-item {
   height: 30px;
-  padding: 5px $grid-gutter-width / 2;
+  padding: 5px calc($grid-gutter-width / 2);
 }
