--- a/app/assets/stylesheets/blocks/_navbars.scss
+++ b/app/assets/stylesheets/blocks/_navbars.scss
@@ -1,5 +1,5 @@
 @use '../variables/bootstrap' as *;
-@use "../../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss" as *;
+@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
 /* For org navbar custom height */
 #org-navbar {
   border-radius: 0px;
@@ -39,7 +39,7 @@
     }
   }
   #org-navbar .org-links {
-    padding-top: $grid-gutter-width / 2;
+    padding-top: calc($grid-gutter-width / 2);
   }
   #org-navbar .org-a {
     line-height: 36px !important;
@@ -52,7 +52,7 @@
 
 // Branding navbar. This is defined as a clone of .navbar-branding with customizations
 .navbar-branding {
-  @extend .navbar-inverse;
+  @extend .navbar-inverse !optional;
   background-color: $navbar-branding-bg;
   border-color: $navbar-branding-border;
 
@@ -116,7 +116,7 @@
       }
     }
 
-    @media (max-width: $grid-float-breakpoint-max) {
+    @include media-breakpoint-down(md) {
       // Dropdowns get custom display
       .open .dropdown-menu {
         > .dropdown-header {
