--- a/app/assets/stylesheets/blocks/_profile_form.scss
+++ b/app/assets/stylesheets/blocks/_profile_form.scss
@@ -1,9 +1,9 @@
-@use "../../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss" as *;
+@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
 // TODO: Refactor this. Instead of writing specific CSS rules for particular objects,
 // we should provide utility classes which can provide the desired style to this object
 .org-logo-controls {
   display: inline-block;
-  margin-left: $grid-gutter-width / 2;
+  margin-left: calc($grid-gutter-width / 2);
   input { display: inline-block; }
   strong { margin: 0 10px; }
 }
