--- a/app/assets/stylesheets/blocks/_tables.scss
+++ b/app/assets/stylesheets/blocks/_tables.scss
@@ -1,5 +1,5 @@
 @use '../variables/colours' as *;
-@use "../../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss" as *;
+@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
 // This file contains overrides to the core Bootstrap 3.x styling
 .table { border: 1px solid $color-border-default; }
 .table thead > tr > th { border-bottom: none; }
@@ -16,7 +16,7 @@ thead th.table-scope {
 
   a {
     color: $color-secondary-text;
-    padding: 2px ($grid-gutter-width / 2) 2px 2px;
+    padding: 2px calc($grid-gutter-width / 2) 2px 2px;
   }
 }
 
@@ -35,7 +35,7 @@ th.download-column {
 /* Fix issues with dropdwon within tables being cut off */
 .table-responsive > .table {
   width: 100%;
-  margin-bottom: $grid-gutter-width / 2;
+  margin-bottom: calc($grid-gutter-width / 2);
   overflow: auto;
 }
 
