--- a/app/assets/stylesheets/blocks/_template_filters.scss
+++ b/app/assets/stylesheets/blocks/_template_filters.scss
@@ -1,6 +1,6 @@
 @use '../variables/colours' as *;
-@use "../../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss" as *;
+@use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
 .template-table-filters .navbar-nav > li > a {
   color: $color-secondary-text;
-  padding: 5px ($grid-gutter-width / 2) 5px 5px;
+  padding: 5px calc($grid-gutter-width / 2) 5px 5px;
 }
