--- a/app/views/layouts/_signin_signout.html.erb
+++ b/app/views/layouts/_signin_signout.html.erb
@@ -1,15 +1,19 @@
 <!-- language dropdown -->
 <% if Language.many? %>
-  <li class="dropdown" id="change-language">
-    <a href="#" class="dropdown-toggle" role="button" id="language-menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <li class="dropdown nav-item" id="change-language">
+    <a href="#" class="dropdown-toggle nav-link" role="button" id="language-menu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <i class="fas fa-language" aria-hidden="true">&nbsp;</i>
       <%= _('Language') %>
       <span class="caret"></span>
     </a>
-    <ul class="dropdown-menu inverse-dropdown" aria-labelledby="language-menu">
+    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="language-menu">
       <% languages.each do |l| %>
-        <li <%= 'class=active' if I18n.locale == l.abbreviation %>>
-          <%= link_to l.name, locale_path(l.abbreviation), method: :patch %>
+        <li></li>
+          <% if I18n.locale == l.abbreviation %>
+            <%= link_to l.name, locale_path(l.abbreviation), method: :patch, class: 'nav-link dropdown-item active' %>
+          <% else %>
+            <%= link_to l.name, locale_path(l.abbreviation), method: :patch, class: 'nav-link dropdown-item' %>
+          <% end %>
         </li>
       <% end %>
     </ul>
@@ -18,26 +22,26 @@
 
 <!-- Sign in / out -->
 <% if user_signed_in? %>
-  <li class="dropdown" id="signin-signout">
-    <a href="#" class="dropdown-toggle" role="button" id="user-menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <li class="dropdown nav-item" id="signin-signout">
+    <a href="#" class="dropdown-toggle nav-link" role="button" id="user-menu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <i class="fas fa-user" aria-hidden="true">&nbsp;</i>
       <%= current_user.name(false) %>
       <span class="caret"></span>
     </a>
-    <ul class="dropdown-menu inverse-dropdown" aria-labelledby="user-menu">
+    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="user-menu">
       <li>
-        <%= link_to '<i class="fas fa-pen-square" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Edit profile'), edit_user_registration_path %>
+        <%= link_to '<i class="nav-link fas fa-pencil-square" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Edit profile'), edit_user_registration_path, class: 'dropdown-item nav-link' %>
       </li>
       <li>
-        <%= link_to '<i class="fas fa-sign-in-alt" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Logout'), destroy_user_session_path, method: :delete %>
+        <%= link_to '<i class="nav-link fas fa-sign-in" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Logout'), destroy_user_session_path, method: :delete, class: 'dropdown-item nav-link' %>
       </li>
     </ul>
   </li>
 <% else %>
   <% if !active_page?(root_path, true) %>
     <li>
-      <a href="<%= root_path %>">
-        <i class="fas fa-sign-in-alt" aria-hidden="true">&nbsp;</i>
+      <a href="<%= root_path %>" class="nav-link">
+        <i class="fas fa-sign-in" aria-hidden="true">&nbsp;</i>
         <%= _('Sign in') %>
       </a>
     </li>
