--- a/app/views/layouts/_branding.html.erb
+++ b/app/views/layouts/_branding.html.erb
@@ -72,47 +72,47 @@
               <% end %>
               <% if current_user.can_modify_templates? %>
                 <% template_path = current_user.can_super_admin? ? org_admin_templates_path : organisational_org_admin_templates_path %>
-                  <li class="nav-item <%= 'class=active' if active_page?(template_path) %>>
+                  <li class="nav-item <%= 'class=active' if active_page?(template_path) %>">
                     <%= link_to _('Templates'), template_path, class: 'nav-link' %>
                   </li>
               <% end %>
               <% if current_user.can_modify_guidance? %>
-                  <li class="nav-item <%= 'class=active' if active_page?(admin_index_guidance_path(current_user.org_id)) %>>
+                  <li class="nav-item <%= 'class=active' if active_page?(admin_index_guidance_path(current_user.org_id)) %>">
                     <%= link_to _('Guidance'), admin_index_guidance_path(current_user.org_id), class: 'nav-link' %>
                   </li>
               <% end %>
               <% if current_user.can_super_admin? %>
-                  <li class="nav-item <%= 'class=active' if active_page?(admin_edit_org_path(current_user.org_id)) %>>
+                  <li class="nav-item <%= 'class=active' if active_page?(admin_edit_org_path(current_user.org_id)) %>">
                     <%= link_to _('Organisations'), super_admin_orgs_path, class: 'nav-link' %>
                   </li>
               <% else %>
                 <% if current_user.can_modify_org_details? %>
-                    <li class="nav-item <%= 'class=active' if active_page?(admin_edit_org_path(current_user.org_id)) %>>
+                    <li class="nav-item <%= 'class=active' if active_page?(admin_edit_org_path(current_user.org_id)) %>">
                       <%= link_to _('Organisation details'), admin_edit_org_path(current_user.org_id), class: 'nav-link' %>
                     </li>
                 <% end %>
               <% end %>
               <% if current_user.can_grant_permissions? %>
-                  <li class="nav-item <%= 'class=active' if active_page?(admin_index_users_path) %>>
+                  <li class="nav-item <%= 'class=active' if active_page?(admin_index_users_path) %>">
                     <%= link_to _('Users'), admin_index_users_path, class: 'main_nav_last_li nav-link' %>
                   </li>
               <% end %>
               <% if current_user.can_super_admin? %>
                 <li class="nav-item <%= 'class=active' if active_page?(super_admin_themes_path) %>">
-                  <%= link_to(_('Themes'), super_admin_themes_path), class: 'nav-link' %>
+                  <%= link_to(_('Themes'), super_admin_themes_path, class: 'nav-link') %>
                 </li>
               <% end %>
               <% if current_user.can_org_admin? || current_user.can_super_admin? %>
-                <li class="nav-item <%= 'class=active' if active_page?(usage_index_path), class: 'nav-link' %>">
-                  <%= link_to(_('Usage'), usage_index_path) %>
+                <li class="nav-item <%= 'class=active' if active_page?(usage_index_path) %>">
+                  <%= link_to(_('Usage'), usage_index_path, class: 'nav-link') %>
                 </li>
               <% end %>
               <% if current_user.can_super_admin? %>
-                <li class="nav-item <%= 'class=active' if active_page?(super_admin_api_clients_path), class: 'nav-link' %>">
-                  <%= link_to(_('Api Clients'), super_admin_api_clients_path) %>
+                <li class="nav-item <%= 'class=active' if active_page?(super_admin_api_clients_path) %>">
+                  <%= link_to(_('Api Clients'), super_admin_api_clients_path, class: 'nav-link') %>
                 </li>
-               <li class="nav-item <%= 'class=active' if active_page?(super_admin_notifications_path), class: 'nav-link' %>">
-                  <%= link_to _('Notifications'), super_admin_notifications_path %>
+               <li class="nav-item <%= 'class=active' if active_page?(super_admin_notifications_path) %>">
+                  <%= link_to(_('Notifications'), super_admin_notifications_path, class: 'nav-link') %>
                 </li>
               <% end %>
             </ul>
