Issue #3144 - Minor changes to app/views/layouts/_branding.html.erb.

--- a/app/views/layouts/_branding.html.erb
+++ b/app/views/layouts/_branding.html.erb
@@ -99,20 +99,20 @@
               <% end %>
               <% if current_user.can_super_admin? %>
                 <li class="nav-item <%= 'class=active' if active_page?(super_admin_themes_path) %>">
-                  <%= link_to(_('Themes'), super_admin_themes_path, class: 'nav-link') %>
+                  <%= link_to _('Themes'), super_admin_themes_path, class: 'nav-link' %>
                 </li>
               <% end %>
               <% if current_user.can_org_admin? || current_user.can_super_admin? %>
                 <li class="nav-item <%= 'class=active' if active_page?(usage_index_path) %>">
-                  <%= link_to(_('Usage'), usage_index_path, class: 'nav-link') %>
+                  <%= link_to _('Usage'), usage_index_path, class: 'nav-link' %>
                 </li>
               <% end %>
               <% if current_user.can_super_admin? %>
                 <li class="nav-item <%= 'class=active' if active_page?(super_admin_api_clients_path) %>">
-                  <%= link_to(_('Api Clients'), super_admin_api_clients_path, class: 'nav-link') %>
+                  <%= link_to _('Api Clients'), super_admin_api_clients_path, class: 'nav-link' %>
                 </li>
                <li class="nav-item <%= 'class=active' if active_page?(super_admin_notifications_path) %>">
-                  <%= link_to(_('Notifications'), super_admin_notifications_path, class: 'nav-link') %>
+                  <%= link_to _('Notifications'), super_admin_notifications_path, class: 'nav-link' %>
                 </li>
               <% end %>
             </ul>
