IssueID #3414 - Minor updates of navigation.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -26,19 +26,20 @@
           <li class="nav-item <%= ' active' if active_page?(new_plan_path, true) %>">
             <%= link_to _('Create plans'), new_plan_path, class: 'nav-link' %>
           </li>
-            <li class="dropdown <%= ' active' if active_page?(public_plans_path, true) || active_page?(public_templates_path, true) %>" id="reference-dropdown">
-              <a href="#" class="dropdown-toggle nav-link" role="button" id="reference-menu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-book" aria-hidden="true">&nbsp;</i>
-                <%= _("Reference") %>
-                <span class="caret"></span>
-              </a>
-              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="reference-menu">
-                <li class="nav-item <%= ' active' if active_page?(public_plans_path) %>">
-                  <%= link_to _('Public DMPs'), public_plans_path, class: 'dropdown-item nav-link' %>
-                </li>
-                <li class="nav-item <%= ' active' if active_page?(public_templates_path) %>">
-                  <%= link_to _('DMP Templates'), public_templates_path, class: 'dropdown-item nav-link' %>
-              </ul>
+          <li class="dropdown <%= ' active' if active_page?(public_plans_path, true) || active_page?(public_templates_path, true) %>" id="reference-dropdown">
+            <a href="#" class="dropdown-toggle nav-link" role="button" id="reference-menu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fas fa-book" aria-hidden="true">&nbsp;</i>
+              <%= _("Reference") %>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="reference-menu">
+              <li class="nav-item <%= ' active' if active_page?(public_plans_path) %>">
+                <%= link_to _('Public DMPs'), public_plans_path, class: 'nav-link dropdown-item' %>
+              </li>
+              <li class="nav-item <%= ' active' if active_page?(public_templates_path) %>">
+                <%= link_to _('DMP Templates'), public_templates_path, class: 'nav-link dropdown-item' %>
+              </li>
+            </ul>
           </li>
         <% else %>
           <li class="nav-item <%= ' active' if active_page?(root_path, true) || active_page?(plans_path, true) %>">
