--- a/app/views/shared/_access_controls.html.erb
+++ b/app/views/shared/_access_controls.html.erb
@@ -1,5 +1,5 @@
 <div class="sign-in">
-  <ul id="signin" class="nav-bar nav" role="tablist">
+  <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item" role="presentation">
       <a class="nav-link" href="#sign-in-form" role="tab" aria-controls="sign-in-form" data-toggle="tab">
         <%= _('Sign in') %>
