--- a/app/views/layouts/_signin_signout.html.erb
+++ b/app/views/layouts/_signin_signout.html.erb
@@ -1,13 +1,14 @@
 <!-- language dropdown -->
 <% if Language.many? %>
   <li class="dropdown nav-item" id="change-language">
-    <a href="#" class="dropdown-toggle nav-link" role="button" id="language-menu" data-bs-toggle="dropdown" 
-       aria-haspopup="true" aria-expanded="false">
+    <a href="#" class="dropdown-toggle nav-link" role="button" id="language-menu" data-bs-toggle="dropdown"
+       data-bs-display="static" aria-haspopup="true" aria-expanded="false">
       <i class="fas fa-language" aria-hidden="true">&nbsp;</i>
       <%= _('Language') %>
       <span class="caret"></span>
     </a>
-    <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="language-menu">
+    <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" 
+        data-bs-popper="static" aria-labelledby="language-menu">
       <% languages.each do |l| %>
         <li>
           <% if I18n.locale == l.abbreviation %>
@@ -25,12 +26,13 @@
 <% if user_signed_in? %>
   <li class="dropdown nav-item" id="signin-signout">
     <a href="#" class="dropdown-toggle nav-link" role="button" id="user-menu" data-bs-toggle="dropdown"
-       aria-haspopup="true" aria-expanded="false">
+       data-bs-display="static" aria-haspopup="true" aria-expanded="false">
       <i class="fas fa-user" aria-hidden="true">&nbsp;</i>
       <%= current_user.name(false) %>
       <span class="caret"></span>
     </a>
-    <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="user-menu">
+    <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" 
+        data-bs-popper="static" aria-labelledby="user-menu">
       <li>
         <%= link_to '<i class="fas fa-pencil-square" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Edit profile'), edit_user_registration_path, class: 'nav-link dropdown-item' %>
       </li>
