--- a/app/views/layouts/_signin_signout.html.erb
+++ b/app/views/layouts/_signin_signout.html.erb
@@ -12,9 +12,9 @@
       <% languages.each do |l| %>
         <li>
           <% if I18n.locale == l.abbreviation %>
-            <%= link_to l.name, locale_path(l.abbreviation), method: :patch, class: 'nav-link active dropdown-item px-2' %>
+            <%= link_to l.name, locale_path(l.abbreviation), method: :patch, class: 'nav-link active dropdown-item  px-3' %>
           <% else %>
-            <%= link_to l.name, locale_path(l.abbreviation), method: :patch, class: 'nav-link dropdown-item px-2' %>
+            <%= link_to l.name, locale_path(l.abbreviation), method: :patch, class: 'nav-link dropdown-item  px-3' %>
           <% end %>
         </li>
       <% end %>
@@ -34,10 +34,10 @@
     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" 
         data-bs-popper="static" aria-labelledby="user-menu">
       <li>
-        <%= link_to '<i class="fas fa-pencil-square" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Edit profile'), edit_user_registration_path, class: 'nav-link dropdown-item' %>
+        <%= link_to '<i class="fas fa-pen-square" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Edit profile'), edit_user_registration_path, class: 'nav-link dropdown-item' %>
       </li>
       <li>
-        <%= link_to '<i class="fas fa-sign-in" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Logout'), destroy_user_session_path, method: :delete, class: 'nav-link dropdown-item' %>
+        <%= link_to '<i class="fas fa-sign-in-alt" aria-hidden="true">&nbsp;</i>&nbsp;'.html_safe + _('Logout'), destroy_user_session_path, method: :delete, class: 'nav-link dropdown-item' %>
       </li>
     </ul>
   </li>
