Revert "Removed select2 calls"
This reverts commit 2426dc491fbdcd857cf5320e6b09f1452fa293ec.

--- a/app/assets/stylesheets/dmpopidor/_select2.scss
+++ b/app/assets/stylesheets/dmpopidor/_select2.scss
@@ -8,7 +8,7 @@
 .select2 {
   width: 100% !important;
 
-  .-selection__choice {
+  .select2-selection__choice {
     color: white !important;
     background-color: $blue;
   }
