Issue #3144 - Fix for sign in block
Changes:
- Fixed issue re: sign in and create acc blocks appearing together when refreshed
- Changes to nav-tab styling (removed border-radius)

--- a/app/assets/stylesheets/blocks/_navs.scss
+++ b/app/assets/stylesheets/blocks/_navs.scss
@@ -39,6 +39,7 @@ nav ul {
   color: $color-secondary-text;
   border: 1px solid $color-border-default;
   border-bottom-color: transparent; /* Only nav-tabs have a transparent border-bottom */
+  border-radius: 0px;
 }
 .nav-pills > li > a:hover,
 .nav-pills > li > a:focus,
