--- a/app/views/shared/_access_controls.html.erb
+++ b/app/views/shared/_access_controls.html.erb
@@ -1,13 +1,13 @@
 <div class="sign-in">
   <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item" role="presentation">
-      <a class="nav-link" href="#sign-in-form" role="tab" aria-controls="sign-in-form" data-toggle="tab">
+      <a class="nav-link active" href="#sign-in-form" role="tab" aria-controls="sign-in-form" data-bs-toggle="tab">
         <%= _('Sign in') %>
       </a>
     </li>
     <% unless active_page?(new_user_registration_path, true) %>
       <li class="nav-item" role="presentation">
-        <a class="nav-link" href="#create-account-form" role="tab" aria-controls="create-account-form" data-toggle="tab">
+        <a class="nav-link" href="#create-account-form" role="tab" aria-controls="create-account-form" data-bs-toggle="tab">
           <%= _('Create account') %>
         </a>
       </li>
@@ -15,7 +15,7 @@
   </ul>
 
   <div class="tab-content">
-    <div id="sign-in-form" role="tabpanel" class="tab-pane active">
+    <div id="sign-in-form" role="tabpanel" class="tab-pane fade show active">
       <div class="panel">
         <div class="panel-body">
           <%= render :partial => 'shared/sign_in_form' %>
@@ -23,7 +23,7 @@
       </div>
     </div>
     <% unless active_page?(new_user_registration_path, true) %>
-      <div id="create-account-form" role="tabpanel" class="tab-pane">
+      <div id="create-account-form" role="tabpanel" class="tab-pane fade">
         <div class="panel">
           <div class="panel-body">
             <%= render :partial => 'shared/create_account_form', locals: {orgs: orgs, org_partial: org_partial} %>
