Plan navigation icons now uses svg files, added inline_svg gem

--- a/app/assets/stylesheets/dmpopidor/_icons.scss
+++ b/app/assets/stylesheets/dmpopidor/_icons.scss
@@ -1,140 +1,4 @@
 .icon {
-  font-size: 60px;
-
-  &.icon-actions:before {
-    content: "\e900";
-  }
-
-  &.icon-api:before {
-    content: "\e902";
-  }
-
-  &.icon-budget:before {
-    content: "\e903";
-  }
-
-  &.icon-calendar:before {
-    content: "\e904";
-  }
-
-  &.icon-contributors:before {
-    content: "\e906";
-  }
-
-  &.icon-create-plan:before {
-    content: "\e908";
-  }
-
-  &.icon-cursor:before {
-    content: "\e909";
-  }
-
-  &.icon-request-feedback:before {
-    content: "\e90a";
-  }
-
-  &.icon-write-plan-tutorial:before {
-    content: "\e90d";
-  }
-
-  &.icon-dmp-examples:before {
-    content: "\e90e";
-  }
-
-  &.icon-github:before {
-    content: "\e910";
-  }
-
-  &.icon-globe:before {
-    content: "\e911";
-  }
-
-  &.icon-institution:before {
-    content: "\e912";
-  }
-
-  &.icon-informations:before {
-    content: "\e913";
-  }
-
-  &.icon-general-infos:before {
-    content: "\e914";
-  }
-
-  &.icon-play-video:before {
-    content: "\e915";
-  }
-
-  &.icon-mailing-list:before {
-    content: "\e916";
-  }
-
-  &.icon-magnifying-glass:before {
-    content: "\e917";
-  }
-
-  &.icon-password:before {
-    content: "\e919";
-  }
-
-  &.icon-notification-off:before {
-    content: "\e91a";
-  }
-
-  &.icon-notification-on:before {
-    content: "\e91b";
-  }
-
-  &.icon-share:before {
-    content: "\e91c";
-  }
-
-  &.icon-pdf:before {
-    content: "\e91d";
-  }
-
-  &.icon-research-outputs:before {
-    content: "\e91e";
-    font-weight: bold;
-  }
-
-  &.icon-question-mail:before {
-    content: "\e91f";
-  }
-
-  &.icon-question:before {
-    content: "\e920";
-  }
-
-  &.icon-guidance:before {
-    content: "\e921";
-  }
-
-  &.icon-write-plan:before {
-    content: "\e922";
-  }
-
-  &.icon-personal-details:before {
-    content: "\e923";
-  }
-
-  &.icon-resources:before {
-    content: "\e924";
-  }
-
-  &.icon-runs:before {
-    content: "\e925";
-  }
-
-  &.icon-download:before {
-    content: "\e928";
-  }
-
-  &.icon-plan-visibility:before {
-    content: "\e92d";
-  }
-
-  &.icon-show-password:before {
-    content: "\e92e";
-  }
+  width: 55px;
+  height: 55px;
 }
