--- a/app/assets/stylesheets/dmpopidor/_plan.scss
+++ b/app/assets/stylesheets/dmpopidor/_plan.scss
@@ -22,6 +22,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
+      text-decoration: none;
 
 
       width: 150px;
