--- a/app/views/shared/_create_account_form.html.erb
+++ b/app/views/shared/_create_account_form.html.erb
@@ -1,18 +1,18 @@
 <%= form_for resource, namespace: 'new', url: registration_path("user"), html: {autocomplete: "off", id: "create_account_form"} do |f| %>
 
-  <div class="form-group">
+  <div class="form-group mb-3">
     <%= f.label(:firstname, _('First Name'), class: "control-label") %>
     <%= f.text_field(:firstname, class: "form-control", "aria-required": true) %>
   </div>
-  <div class="form-group">
+  <div class="form-group mb-3">
     <%= f.label(:surname, _('Last Name'), class: "control-label") %>
     <%= f.text_field(:surname, class: "form-control", "aria-required": true) %>
   </div>
-  <div class="form-group">
+  <div class="form-group mb-3">
     <%= f.label(:email, _('Email'), class: "control-label") %>
     <%= f.email_field(:email, class: "form-control", "aria-required": true) %>
   </div>
-  <div class="form-group" id="create-account-org-controls">
+  <div class="form-group mb-3" id="create-account-org-controls">
     <%= render partial: org_partial,
                locals: {
                  form: f,
@@ -21,18 +21,18 @@
                  required: true
                } %>
   </div>
-  <div class="form-group">
+  <div class="form-group mb-3">
     <%= f.label(:password, _('Password'), class: "control-label") %>
     <%= f.password_field(:password, class: "form-control", "aria-required": true) %>
   </div>
-  <div class="form-group">
+  <div class="form-group mb-3">
     <div class="checkbox">
       <label>
         <input type="checkbox" id="passwords_toggle_sign_up" class="passwords_toggle" /><%= _('Show password') %>
       </label>
     </div>
   </div>
-  <div class="form-group">
+  <div class="form-group mb-3">
     <div class="checkbox">
       <%= f.label(:accept_terms) do %>
         <%= f.check_box(:accept_terms, "aria-required": true) %>
@@ -42,10 +42,10 @@
     </div>
   </div>
   <% if Rails.configuration.x.recaptcha.enabled %>
-    <div class="form-group">
+    <div class="form-group mb-3">
       <%= label_tag(nil, _('Security check')) %>
       <%= recaptcha_tags %>
     </div>
   <% end %>
-  <%= f.button(_('Create account'), class: "btn-primary", type: "submit") %>
+  <%= f.button(_('Create account'), class: "btn btn-secondary", type: "submit") %>
 <% end %>
