Removed search box in contributors list

--- a/app/assets/stylesheets/dmpopidor.scss
+++ b/app/assets/stylesheets/dmpopidor.scss
@@ -1729,6 +1729,10 @@ header .main-nav {
     background-color: $light-grey;
   }
 
+  .paginable-search {
+    display: none;
+  }
+
 }
 
 .spinner {
