Error message should be properly displayed when saving a modal form

--- a/engines/madmp_opidor/app/views/dynamic_form/_linked_fragment.js.erb
+++ b/engines/madmp_opidor/app/views/dynamic_form/_linked_fragment.js.erb
@@ -23,7 +23,7 @@ $(() => {
   }).on('ajax:error', (e)=> {
     const target = $(e.target);
     const data = e.detail[0];
-    target.find('.message-area').html(data.error).addClass('alert-danger');
+    target.parents('.modal').find('.message-area').html(data.error).addClass('alert-danger');
   });
 
   $('#modal-window form :input').on('change', () => {
