--- a/app/views/branded/plans/_share_form.html.erb
+++ b/app/views/branded/plans/_share_form.html.erb
@@ -146,7 +146,7 @@
             <%= f.radio_button :visibility, 
                                :publicly_visible, class: 'set-plan-public',
                                 data: { 
-                                  confirm_message: _('You have chosen to make your plan public. Before confirming, please ensure that your plan is complete. This DMP can be used as an example for other, please fill the different sections. Do you confirm?')
+                                  confirm_message: _('You have chosen to make your plan public. Before confirming, please ensure that your plan is complete. This DMP can be used as an example for other, please fill the different sections. Do you confirm and then update your choice?')
                                 } 
             %>
             <%= _('Public: anyone can view') %>
